--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-google-analytics",
+  "name": "andreasanalyticsnext",
   "scripts": {
     "dev": "next",
     "build": "next build",
