--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "next": "11.1.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "sass": "^1.43.2"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.29",
+    "typescript": "^4.4.4"
   }
 }
