--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "11.1.2",
+    "next": "12.1.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.43.2"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.35",
     "@types/react": "^17.0.29",
     "typescript": "^4.4.4"
   }
